--- a/Explore/Versioned_Project/.Versioned_Project.Project.json
+++ b/Explore/Versioned_Project/.Versioned_Project.Project.json
@@ -1,7 +1,7 @@
 {
   "objectInfo" : {
     "id" : "i16YbG4mbyrlhNvu7f5oSp",
-    "name" : "Versioned_Project_Renamed",
+    "name" : "Versioned_Project",
     "type" : "Project",
     "metadata" : {
       "modelVersion" : {
@@ -18,6 +18,6 @@
     }
   },
   "dataFileExtension" : "json",
-  "updateTime" : "2023-07-27T10:33:32.666Z",
+  "updateTime" : "2023-07-27T10:33:37.996Z",
   "objectRefs" : [ ]
 }
